--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-<head>
-</head>
-<body>
-<h1>It works!</h1>
-</body>
+
+  <head>
+    <title>This is yet another test site that I wrote in simple html... Yay! </title>
+  </head>
+
+
+  <body>
+  <h1>It works!</h1>
+  </body>
 </html>
