some snow. not working yet

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!--
 To change this template use Tools | Templates.
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-    <title>testing</title>
-</head>
-<body>
-<h1>seems to work</h1>
-</body>
+    <head>
+        <title>testing</title>
+        <script type="text/javascript" src="jsnow.js"></script>
+        <script type="text/javascript">
+            $(function() {$
+            ().jSnow({
+            fadeAway:true
+            });
+            });
+        </script>
+    </head>
+    <body>
+        <h1>seems to work</h1>
+    </body>
 </html>
