--- a/skeleton.html
+++ b/skeleton.html
@@ -5,13 +5,15 @@
         <title>Discover Coventry</title>
         <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">        
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     </head>
 
     <body>
         <div id="page">
             <header>
-                <div id="logo">
-                    <img src="covlogo2.png" alt="Coventry City Logo">
+                <div id="logo" itemscope itemtype="http://schema.org/City">
+                    <img itemprop="logo" src="covlogo2.png" alt="Coventry City Logo" />
                 </div>
                 <nav>
                     <div id="floater"></div>
@@ -26,16 +28,34 @@
                     </div>
                 </nav>
             </header>
-            <div class="content">
-
-                <article>
+            <div class="content" itemscope itemtype="http://schema.org/City">
+                    <div class="imgright">
+                        <img itemprop="photo" class="zoom" src="images/coventry-index.jpg" alt="Coventry city photo. Showing a panoramic view of the cathedral and city centre."><h6>Click to zoom</h6>
+                    </div>
+                <article><h1>Coventry City Guide</h1>
+                <p>Welcome to <span itemprop="name">Coventry</span>. <span itemprop="description">Our city and region is rich in culture, history and heritage and has made a name for itself through the centuries, captivating visitors from right across the globe with the finest selection of historic medieval buildings and internationally recognisable family friendly attractions.</span> From castles and cathedrals to motor museums and art galleries we have legends and stories that are unrivalled and unmatched. Just an hour from London by train and twenty minutes from central Birmingham, we are truly at the heart of the UK. Whether you are staying for a week, a few short days or here for a few hours, we have something for everyone.</p>
                 </article>
             </div>
             <footer>
                 <div id="foo">
-                <a href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo" /> </a>
+                    <p style="line-height:40px;float:left;margin-left:10px;">Follow us!</p>
+                        <ul>
+                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="images/fb.png" alt="Facebook button"></a></li>
+                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="images/flickr.png" alt="Flickr button"></a></li>
+                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="images/twitter.png" alt="Twitter button"></a></li>
+                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="images/gplus.png" alt="Google Plus button"></a></li>
+                        </ul>
+                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo"> </a>
                 </div>
             </footer>
         </div>
+        <script>
+            $( '.zoom' ).click(function() {
+              $( '.imgright' ).switchClass( "imgright", "imgrightzoom", 1000, "easeInOutQuad" );
+                var txt = $(this).parent().children("h6");
+                txt.toggle();
+                $( ".imgrightzoom" ).switchClass( "imgrightzoom", "imgright", 1000, "easeInOutQuad" );
+            });
+        </script>
     </body>
 </html>
