--- a/history.html
+++ b/history.html
@@ -5,6 +5,8 @@
         <title>Discover Coventry</title>
         <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">        
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     </head>
 
     <body>
@@ -27,18 +29,32 @@
                 </nav>
             </header>
             <div class="content">
-                <div class="imgright"><img style="width:200px;" src="images/cov-history.jpg" alt="one of the three cathedrals"></div>
+                <div class="imgright"><img class="zoom" style="width:200px;" src="images/cov-history.jpg" alt="one of the three cathedrals"><h6>Click to zoom</h6></div>
                 <article><h1>History</h1><p>From its humble beginnings as a settlement around a Saxon nunnery c. AD 700, Coventry grew to become one of the most important cities in England during the Middle Ages due to its booming cloth and textiles trade. The city was noted for its part in the English Civil War, and later became an important industrial city during the 19th and 20th centuries, becoming the centre of the British bicycle and later motor industry. The devastating Blitz in 1940 destroyed most of the city centre, and saw its rebuilding during the 1950s and 60s. The motor industry slumped during the 1970s and 80s, and Coventry saw high unemployment.</p>
                     <p><h2>City walls</h2>
-Swanswell Gate with one of the few surviving sections of Coventry's city walls
-Reflecting Coventry's commercial and strategic importance, in 1355 construction began on city walls, a vast and expensive undertaking funded by local tolls and taxes, and for which King Richard II allowed stone to be quarried from his park in Cheylesmore. The building started at New Gate and was initially finished in around 1400, but much repair work and re-routing was subsequently carried out and its final form was not completed until 1534. They were an impressive feature; measuring nearly 2.2 miles (3.5 km) around and consisting of two red sandstone walls infilled with rubble over 8 feet (2.4 m) thick and 12 feet (3.7 m) high, with 32 towers including 12 gatehouses. With its walls, Coventry was described as being the best-defended city in England outside London.</p>
+<p>Swanswell Gate with one of the few surviving sections of Coventry's city walls Reflecting Coventry's commercial and strategic importance, in 1355 construction began on city walls, a vast and expensive undertaking funded by local tolls and taxes, and for which King Richard II allowed stone to be quarried from his park in Cheylesmore. The building started at New Gate and was initially finished in around 1400, but much repair work and re-routing was subsequently carried out and its final form was not completed until 1534. They were an impressive feature; measuring nearly 2.2 miles (3.5 km) around and consisting of two red sandstone walls infilled with rubble over 8 feet (2.4 m) thick and 12 feet (3.7 m) high, with 32 towers including 12 gatehouses. With its walls, Coventry was described as being the best-defended city in England outside London.</p>
                 </article>
             </div>
             <footer>
-                <div id="foo">
-                <a href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo" /> </a>
+                <div id="foo" >
+                    <p style="line-height:38px;float:left;margin-left:10px;">Follow us!</p>
+                        <ul>
+                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="images/fb.png" alt="Facebook button"></a></li>
+                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="images/flickr.png" alt="Flickr button"></a></li>
+                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="images/twitter.png" alt="Twitter button"></a></li>
+                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="images/gplus.png" alt="Google Plus button"></a></li>
+                        </ul>
+                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo"> </a>
                 </div>
             </footer>
         </div>
+        <script>
+            $( '.zoom' ).click(function() {
+              $( '.imgright' ).switchClass( "imgright", "imgrightzoom", 1000, "easeInOutQuad" );
+                var txt = $(this).parent().children("h6");
+                txt.toggle();
+                $( ".imgrightzoom" ).switchClass( "imgrightzoom", "imgright", 1000, "easeInOutQuad" );
+            });
+        </script>
     </body>
 </html>
