--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
                 </article>
             </div>
             <footer>
-                <div id="foo">
-                <a href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo" /> </a>
+                <div id="foo" >
+                    <p style="line-height:38px;float:left;margin-left:10px;">Follow us!</p>
+                        <ul>
+                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="images/fb.png" alt="Facebook button"></a></li>
+                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="images/flickr.png" alt="Flickr button"></a></li>
+                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="images/twitter.png" alt="Twitter button"></a></li>
+                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="images/gplus.png" alt="Google Plus button"></a></li>
+                        </ul>
+                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo"> </a>
                 </div>
             </footer>
         </div>
