--- a/university.html
+++ b/university.html
@@ -5,10 +5,12 @@
         <title>Discover Coventry</title>
         <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">        
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     </head>
 
     <body>
-        <div id="page">
+        <div id="page" itemscope itemtype="http://schema.org/CollegeOrUniversity">
             <header>
                 <div id="logo">
                     <img src="covlogo2.png" alt="Coventry City Logo">
@@ -27,18 +29,38 @@
                 </nav>
             </header>
             <div class="content">
-                <div><img src="images/cov-uni.png" alt="Coventry University logo" style="float:left;width:120px;"></div>
-                <article><h1>Coventry University</h1>
-                    <p>Coventry University is a public research university in the city of Coventry, England. It was established as a university through the Further and Higher Education Act 1992, and was formerly known as Lanchester Polytechnic until 1987 and Coventry Polytechnic until it was awarded university status.</p><div class="imgright"><img src="images/ecb.jpg" alt="A photo of the Engineering and Computing Building" style="width:300px;"></div>
+                <div><img itemprop="logo" src="images/cov-uni.png" alt="Coventry University logo" style="float:left;width:120px;"></div>
+                <article><h1><span itemprop="name">Coventry University</span></h1>
+                    <p><span itemprop="description">Coventry University is a public research university in the city of <span itemprop="foundingLocation">Coventry, England</span>. It was established as a university through the Further and Higher Education Act <span itemprop="foundingDate">1992</span>, and was formerly known as Lanchester Polytechnic until 1987 and Coventry Polytechnic until it was awarded university status.</span></p><div class="imgright"><img class="zoom" src="images/ecb.jpg" alt="A photo of the Engineering and Computing Building" style="width:300px;"><h6>Click to zoom</h6></div>
                     <p>With more than 27,000 students (as of 2013), Coventry University is the larger of the two universities in the city, the other being the University of Warwick. It has two campuses: one in the city centre of Coventry where a large majority of the university operates, and one in London. The campus in Coventry is currently undergoing a £160m redevelopment programme. The university comprises four faculties and one school, and manages a number of commercial subsidiaries that provide business services to local and national organisations.</p>
                     <p>The university is a member of the Association of Commonwealth Universities, University Alliance and Universities UK.</p>
+                    
+                    <video width="760" height="500" controls>
+                        <source src="images/vid.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </article>
             </div>
             <footer>
-                <div id="foo">
-                <a href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo" /> </a>
+                <div id="foo" >
+                    <p style="line-height:38px;float:left;margin-left:10px;">Follow us!</p>
+                        <ul>
+                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="images/fb.png" alt="Facebook button"></a></li>
+                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="images/flickr.png" alt="Flickr button"></a></li>
+                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="images/twitter.png" alt="Twitter button"></a></li>
+                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="images/gplus.png" alt="Google Plus button"></a></li>
+                        </ul>
+                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo"> </a>
                 </div>
             </footer>
         </div>
+        <script>
+            $( '.zoom' ).click(function() {
+              $( '.imgright' ).switchClass( "imgright", "imgrightzoom", 1000, "easeInOutQuad" );
+                var txt = $(this).parent().children("h6");
+                txt.toggle();
+                $( ".imgrightzoom" ).switchClass( "imgrightzoom", "imgright", 1000, "easeInOutQuad" );
+            });
+        </script>
     </body>
 </html>
