--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>    
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Discover Coventry</title>
-        <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">        
+        <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">
         <link rel="stylesheet" type="text/css" href="style.css" />
         <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
@@ -18,7 +18,7 @@
                 <nav>
                     <div id="floater"></div>
                     <div id="navigation">
-                        <ul> 
+                        <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="history.html">History</a></li>
                             <li><a href="contact.html">Contact Us</a></li>
@@ -40,12 +40,12 @@
                 <div id="foo" >
                     <p style="line-height:38px;float:left;margin-left:10px;">Follow us!</p>
                         <ul>
-                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="images/fb.png" alt="Facebook button"></a></li>
-                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="images/flickr.png" alt="Flickr button"></a></li>
-                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="images/twitter.png" alt="Twitter button"></a></li>
-                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="images/gplus.png" alt="Google Plus button"></a></li>
+                            <li><a href="http://www.facebook.com/covguide" target="_blank"><img src="/images/fb.png" alt="Facebook button"></a></li>
+                            <li><a href="http://www.flickr.com/covguide" target="_blank"><img src="/images/flickr.png" alt="Flickr button"></a></li>
+                            <li><a href="http://www.twitter.com/covguide" target="_blank"><img src="/images/twitter.png" alt="Twitter button"></a></li>
+                            <li><a href="http://plus.google.com/+covguide" target="_blank"><img src="/images/gplus.png" alt="Google Plus button"></a></li>
                         </ul>
-                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="images/html5_valid.png" alt="the html5 valid logo"> </a>
+                <a  href="http://validator.w3.org/check?uri=referer" target="_blank" ><img src="/images/html5_valid.png" alt="the html5 valid logo"> </a>
                 </div>
             </footer>
         </div>
